test/baseline/func-a.test
2012-01-01 Test a function
    Assets:Test                       $100.00
    Equity:Opening

test eval "a()" -> 1
__ERROR__
While evaluating value expression:
  a()
  ^^^
Error: Unknown identifier 'a'
end test
